tests/snapshots/compile_file__switch_all_patterns.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/switch_all_patterns.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file/switch_all_patterns.bend[0m[1m :[0m
[1m- expected:[0m '0'
[1m- detected:[0m
[0m  7 |   [4m[31m_[0m: x-1[0m
