tests/snapshots/compile_file__switch_in_switch_arg.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/switch_in_switch_arg.bend
---
@main = (?((0 (a a)) ?((0 @main__C0) b)) b)

@main__C0 = ($([+1] a) a)
