tests/snapshots/compile_file__switch_in_switch_arg.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/switch_in_switch_arg.hvm
---
@main = (?((0 (a a)) ?((0 ($([+1] b) b)) c)) c)
