tests/snapshots/compile_file__switch_incomplete.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/switch_incomplete.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_file/switch_incomplete.bend :
[1m- expected:[0m Term - Lambda or Application or Tuple or Operation or List or Tree or Sup or Unscoped Var or Eraser or String or Char or Symbol or Number or Use or Let or Def or If or Match or Switch or With or Fold or Bend or Open or Var
[1m- detected:[0m
[0m   2 | main = switch {[4m[31m}[0m
