tests/snapshots/compile_file__switch_unscoped_lambda.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/switch_unscoped_lambda.hvm
---
@lambda_in = (?(((a a) (b (c b))) (c d)) d)

@lambda_out = (?((a (b b)) c) (a c))

@main = *
