tests/snapshots/compile_file__tagged_lam.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/tagged_lam.hvm
---
@main = a
& [{2 <+ #1 b> b} {2 {3 c <* c d>} d}] ~ {2 #2 a}

